# ml-engineer-path

./: README.md
ml_frameworks/pytorch/: pyproject.toml
ml_frameworks/pytorch/notebooks/: cross-entropy-pytorch.ipynb  numpy_practice.ipynb  pytorch-practice.ipynb
ml_frameworks/pytorch/notebooks/.ipynb_checkpoints/: numpy_practice-checkpoint.ipynb
